--- a/resources/theme_dark.css
+++ b/resources/theme_dark.css
@@ -7,6 +7,7 @@
 	-fx-theme-dim-text:                           #919191;
     -fx-theme-button1-background:                 #336699;
 	-fx-theme-button1-text:                       white;
+    -fx-theme-button-hover:                       #9c0084;
     -fx-theme-button2-background:                 #919191;
 	-fx-theme-button2-text:                       white;
 	
